--- a/Appendix.org
+++ b/Appendix.org
@@ -12,7 +12,6 @@ Be careful not to over-think the meaning, but it should be apparent from context
 
 ** Glossary
 
-- clubbing-camp: training camp.
 - after-die-monster: Their Devil. Just one, like you.
 - ancient-speak: Generally meaning "story-telling", this analogous to selling a book in our times. It is both 1) revered by default 2) kind of, let's face it, not always going to be a big deal. Times change, pops.
 - baby-makers: Girls. I am sorry. My job is to bring you this story accurately, including look /and/ feel. This was their world, sorry. But a Crec, or perhaps even any caveperson would have no less respect for a /mere/ baby-maker than you would for say a truck driver or computer technician. It's due its own respect, in their eyes. And everyone gets along, no less than you and your sister did. It's just what's up, that's all.
@@ -29,10 +28,12 @@ Be careful not to over-think the meaning, but it should be apparent from context
 - Choh-Ov: Military training camp nearest Bhorv Zolk, in the small settlment of Fayt-Caves.
 - Clorp [singular and plural]: TODO: who are then and what makes them tick. They are the "enemy" of the Crec. And a definition.
 - club-fight: A kind of duel involving some ceremony. There is a regulatory body <why not name it here> that exists to ensure that any two clubs used in a club-fight are recognized as being "fair". The participants, on the other hand vary widely. The last rule of club-fight, as it is the most important, is: Someone's got to not be able to walk away.
+- clubbing-camp: training camp.
 - Crec [singular and plural]: The Forest to which the Zog clan both lives and belongs. "Crec" can refer to the Forest or the people who live there.
+- Douks: Forest bordering the northeast of Crec.
+- down-power: Gravity
 - drop-stone: A unit of time; about as long as it takes for a stone to hit the ground when dropped from an outstretched hand, on more or less level ground. They're as tall as you and used to inhibit the same planet. It works out to be a bit over half a second.
 - elders-quorum: This is a sort of "The Senate" of a Forest (in cases where they have bothered). It's just as inept and entertaining as our analogs (diet, soviet, merikin, parliament, kremlin, house, neighborhood gang...)
-- down-power: Gravity
 - Ender's-Stump: The "joke" name given Ender's-Sword by G&G. They are too contemptuous to go around saying "Ender's-Sword" to each other.
 - Ender's-Sword: The name given to the strange (obscene) gem found by G&G
 - Ender-Of-All-Questions: God. Just one, like you. You will encounter references to "the gods". Rather improbably, this is used exactly as a modern, cynical teenager might use it: ironically. As in, /You are still such a tiresome superstitious moron that you probably believe in/ multiple /gods like back in primitive times./
@@ -40,6 +41,7 @@ Be careful not to over-think the meaning, but it should be apparent from context
 - Fayt-Caves: The charming town surrounding Choh-Ov.
 - food-clay: Shit
 - force: Strain.
+- forest-child: A mysterious people that have the appearance of babies, none of the signs of dwarfism as far as can be determined, but have the "presence" of adults more or less, including callouses, injuries, smoking habits, and general casualness. They never seemed to be surprised to encounter the Crec, often stop to talk (usually monologue) for minutes, apparently sharing relevant trekking tips. None of their language is understood by any Crec. They don't seem to follow paths of any kind and are encountered intersecting established paths at random angles. Every encounter was pretty much the same, indicating that these were the member of a culture or "Forest" of some sort, and no one remembers encountering the same one more than once.
 - Forest-Deer: A political party (same deal) that composes exactly 50% of the Elders-Quorum (You should now be asking if these are the good guys.)
 - Forest: The largest organizing category of people, analogous to a nation.
 - juff: An alcoholic beverage made from fermented coconut flesh, and a polite quantity of spit from a special, designated virgin baby-maker, who is chosen yearly as the designated provider of spit (A custom that has been known to ruin some plans.)
@@ -56,12 +58,14 @@ Be careful not to over-think the meaning, but it should be apparent from context
 - several-finger: A quantity of something. It is exactly 10. The number of fingers you have. Like "dozen" but two less.
 - sit-ham-stone: Chair
 - sit-ham: Butt-cheek
+- Small Woods: The more woodsy part of the trek from Bhorv Zolk, just before reaching Snare Planes. The transition is rather sudden: One goes from shady canopy to open sky in only a few steps. The boundary looks like a green, tumbling ocean meeting a dusty, scrubby continent, with the overhanging trees looking like frozen waves about to crash.
 - snake-meal: A "bump", "lump", "protuberance", "hump", or area of fattening. Also used in the way we say, "love handles".
+- Snare Planes: The plains/savanna met just before Fayt-Caves when traveling from Bhorv Zolk.
 - soot-pallet: Wherever fire has deposited soot on an area of stone that has been used for writing, if you write in it, it becomes a "soot-pallet". It's as common as and thought of like billboards, but are not thought of as owned, so it's acceptable for someone to write something (proper) on such a sooted stone surface. Trespassing is still a thing, though.
 - squirrel-hoard: An abstract quantity meaning "a lot", if you thought "a whole bunch of" you'd be close.
 - strength: "Force", in the way used in physics.
-- take-value: Shorthand for take-part-value. Take-value also means "robbery" or "mugging", but the Crec universally do not make the connection.
 - take-part-value: A tax.
+- take-value: Shorthand for take-part-value. Take-value also means "robbery" or "mugging", but the Crec universally do not make the connection.
 - value-stone: A unique, hopefully big, visually appealing gem or mineral (there are many sources.) They are the currency, but their relative value is determined at haggling time, which makes for double the arguments.
 - Wolf-Sleep: To meditate peacefully by actively observing all of one's sensory input, minus vision. Learning to actively monitor every inch of your skin, every sound you hear, perhaps the taste of a recent meal, one can paradoxically become quite calm and contented. Importantly, one does not "analize" the input. This leads to the kind of /thinking/ that is to be quieted. This is called Wolf-Sleep, because once the trick is mastered, practitioners, always observing their breath, from thoat outward, would be able to jump into this relaxed, serene state with ever more ease, which reliably made their third, fourth of fifth breath a big, relaxed, satisfying, full-body "hmuffffffff...." that observers of wolves and modern dog owners are familiar with. The most elite practitioners, those who understood this as more than just a way to relax, were able to endure most any sensation with genuine enjoyment, so long as it did not pose a threat. For example, a raw, bloody scrape on your leg will be crawling with gnats and flies in a matter of minutes. While this /is/ a kind of threat, and the Crec know it, one only needs to rinse the wound in a clean river and scrub it with light sand from time to time. Knowing that this sensation is no real threat it goes right to the "observe" category; not dwell upon, or worry aboout, just "observe", like all other input. These many hundred legs provided an enormous amount of "input" for the skilled wolf-sleeper to make a practice of trying to absorb ever more detail about this bit of sensory input. Some claimed to be able to note every bug's footfall and every prodding with mouth-parts; knowing usually which direction any of his visitors might be facing.
 - Workers: The "Workers" describe normal people doing normal things. They are distinguished from others only in that they 'sense they are part of something'. They're OK. They're surly but unsure of themselves. They become agreeable and polite when there is talk of any kind of increase in their pay. Grav thinks these people could just choose to focus on other things.
