--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -12,7 +12,7 @@ Given enough cavemen, you will find some outliers. You may not know anyone who l
 
 As a Crec, you could and probably would some day be drafted. But to make a career out of it was a different tack. If drafted and not a CO, you pretty much spent all your time either killing, being killed, or learning to kill. CO's were more the managerial type.
 
-And so, since your fate, if a man, was to be involved in all this anyway, a /completely voluntary/ "club-drill" was held in locations around the Forest. If bloody combat was going to inevitably going to happen, one may as well be among the best-prepared.
+And so, since your fate, if a man, was to be involved in all this anyway, /completely voluntary/ "club-drills" were regularly held in locations around the Forest. If bloody combat was going to inevitably going to happen, one may as well be among the best-prepared.
 
 You may have stopped and wondered yourself: What was it like to be among a sea of men with on opposing "teams", all literally in a life-or-death fight with both sharp and blunt instruments, /right there in front of you/, wanting to kill you. And you wanting to kill because of that. It's an unimaginably frightening thought when it's both real and likely. Try and touch that kind of terror in yourself, see if you can imagine yourself in that terrifying bloody mess: This is what motivated Grav and Gog to trek all this way, all-too-regularly.
 
