--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -18,7 +18,7 @@ You may have stopped and wondered yourself: What was it like to be among a sea o
 
 The clubbing-camps were usually overseen by some Great Bear war hero. The one nearest Bhorv Zolk, called Choh-Ov, was surrounded by a kind of suburb named Fayt-Caves, and was run by Verk. The title of this role, the camp head, was Mother Bear[fn:: Absolutely no one saw a hint of humor or absurdity in this title. Yes, it was well known that mother bears are female, but mother bears were and are fierce as monkey-business.]. Verk was Choh-Ov's Mother Bear.
 
-Fayt-Caves was a shanty town, but made out of rock, which really looks nicer than shanty any way you cut it. The settlement surrounding Choh-Ov was seedy, crime-ridden, full of loud parties on an ongoing basis, had an entire district devoted to hire-baby-makers and their trade. Choh-Ov was more or less at the very center of this fried egg of empty calories.
+Fayt-Caves was a shanty town, but made out of rock, which really looks nicer than shanty any way you cut it. The settlement surrounding Choh-Ov was seedy, crime-ridden, full of loud parties on an ongoing basis, had an entire district devoted to hire-baby-makers and their trade. Choh-Ov was more or less the yolk of this sad, desperate fried egg.
 
 And it was small-knowledge[fn:: 'small[-one]-knowledge': common sense, widely known.] that this was the norm; surrounding more or less every clubbing-camp in the Forest and its protectorates was a 'bad neighborhood' by most definitions. No one thought this amiss. It was small-knowledge[fn:: This effect was also seen surrounding Crec's very few places of high learning, 'scratching-camps'].
 
