--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -26,7 +26,7 @@ Grav and Gog had decided to leave the day after the revelation of Ender's-Sword,
 
 In the worst case, they planned to bevvy one night, wake up early and arrive at the Choh-Ov before conch.
 
-As Bhorv Zolk faded into the distance, the path to the morning-sun-left-back-side[fn:: Northwest.] was gently rolling hills and low shrubs for several palm. Bhorv Zolk could be seen fading into the distance, which was a nice way to say goodbye to home. One got a feeling that it was very big, visible from all this way, and would therefore surely be there when you got back[fn:: And coming back was also a nice, slow 'hello'. You felt 'home' many palm before you actually were.].
+As Bhorv Zolk faded into the distance, the path to the morning-sun-left-back-side[fn:: Northwest.] was gently rolling hills and low shrubs for several palm. Bhorv Zolk could be seen fading into the distance, which was a nice way to say goodbye to home. One got a feeling that it was very big, being visible from all this way, and would therefore surely be there when you got back[fn:: And coming back was also a nice, slow 'hello'. You felt 'home' many palm before you actually were.].
 
 Gog hummed, whistled and yipped an improvised song, that Grav didn't really want to admit was actually pretty good.
 
