--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -34,7 +34,7 @@ He'd worked on convincing Gog to have a visit with Kapitle, the music-scratcher 
 
 Sell the materials needed to perform a cover of the latest hit was really all there was in the music business, outside of performing of course, for which you would need security and acoustical expertise.
 
-Grav just enjoyed the well selected traveling music and thought a lot about how to best navigate the next few days, not for any particular reason other than one should plan ahead always, he thought.
+Grav just enjoyed the well selected traveling music and thought a lot about how to best navigate the next few days, not for any particular reason other than one should always plan ahead.
 
 Would word have gotten out? Verk would not be at the camp, not feeling any particular need to be there. He would make his way back eventually, at his own pace, likely after Grav and Gog had gone <-xxx maybe they meet up on the way home xxx
 
