--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -48,7 +48,7 @@ Without breaking his stride, Gog abruptly stopped his music and looked at Grav, 
 
 Grav's run became a staggering, rhythmic stomp as he laughed maniacally while continuing to run. He eventually gave up on that and let himself fall into an enormous healthy, dark-purple heather shrub. He continued to laugh face-down at the dirt and detritus at the ancient shrub's base. He noticed a worm quickly escaping downwards in his haze of mirth.
 
-He eventually righted himself, making a lot of noise as he pushed himself up, snapping small branches and spitting out the various purple blooms and twigs that ended up in his open mouth.
+He eventually righted himself, making a lot of noise as he pushed himself up, snapping small branches and spitting out a sparse cloud of tiny purple petal glitter and twigs that had ended up in his open mouth.
 
 "Scout[fn:: "Dude!!"], you need to lay off of that stuff! Not everyone is as mirth-filled as us, you know. The Forest Executioners are not known for their stoatishness[fn:: Sillyness].", said Grav.
 
