--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -54,7 +54,7 @@ He eventually righted himself, making a lot of noise as he pushed himself up, sn
 
 "Eegh. I'm tired of worrying about it, to be frank." Gog was such an artist with his banana-language that he was no longer entertained by it, and so was laughing not at all. It seemed like he just thought of it as his 'job'; trudging through another day of saying things that caused others to nearly have a stroke with hilarity. "You know either of us could be dead tomorrow."
 
-"But probably not 'from torture'.", reasoned Gog.
+"Yeah, but probably not 'from torture'.", reasoned Gog.
 
 "I mean, yeah, of course I will always take reasonable precautions. But mount it, it becomes so much of a drain on me to constantly have to edit my words, that I'm willing to be a bit 'strategically reckless' in order to just relax for a /sewing/ change!!" Gog seemed to be shaking his head in disgust.
 
