--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -56,7 +56,7 @@ He eventually righted himself, making a lot of noise as he pushed himself up, sn
 
 "Yeah, but probably not 'from torture'.", reasoned Gog.
 
-"I mean, yeah, of course I will always take reasonable precautions. But mount it, it becomes so much of a drain on me to constantly have to edit my words that I'm willing to be a bit 'strategically reckless' in order to just relax for a /sewing/ change!!" Gog seemed to be shaking his head in disgust. "Also, always feeling like you want to live another day so that I can say as much banana as I want is its own motivation to not get cheeped on[fn:: 'Snitched on', 'told on'. It was the the automonopoetic word for the sounds a baby bird makes, like in many langues, 'cheep'. So to 'cheap' on someone was to cry to mamma bird, in essence.]."
+"I mean, yeah, of course I will always take reasonable precautions. But mount it, it becomes so much of a drain on me to constantly have to edit my words that I'm willing to be a bit 'strategically reckless' in order to just relax for a /sewing/ change!!" Gog seemed to be shaking his head in disgust. "Also, always feeling like you want to live another day so that I can say as much banana as I want is its own kind of motivation to not get cheeped on[fn:: 'Snitched on', 'told on'. It was the the automonopoetic word for the sounds a baby bird makes, like in many langues, 'cheep'. So to 'cheap' on someone was to cry to mamma bird, in essence.]."
 
 "They /are/ just words, aren't they?", said Grav, sharing some of Gog's annoyance at the arbitrariness of it all. Though, he was not yet an angry rebel like Gog. "It angers me too. Some things are at the same time both infuriatingly stupid and unjust, while at the same time being completely small-knowledge to seemingly everyone. Everyone gets so clubby[fn:: 'On edge'.] about /language/."
 
