--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -60,7 +60,7 @@ He eventually righted himself, making a lot of noise as he pushed himself up, sn
 
 "There's some motivation.", pondered Grav.
 
-"And they /are/ just words, aren't they?", he continued, now sharing some of Gog's annoyance at the arbitrariness of it all. Though, he was not yet an angry rebel like Gog. "It angers me too. Some things are at the same time both infuriatingly stupid and unjust, while at the same time being completely small-knowledge to seemingly everyone. Everyone gets so clubby[fn:: 'On edge'.] about /language/."
+"And they /are/ just words, aren't they?", he continued, now sharing some of Gog's annoyance at the arbitrariness of it all, though he was not yet an angry rebel like Gog. "It angers me too. Some things are at the same time both infuriatingly stupid and unjust, while at the same time being completely small-knowledge to seemingly everyone. Everyone gets so clubby[fn:: 'On edge'.] about /language/."
 
 Grav continued. "Did you know that in Douks you can have three toenails pulled out for underpaying your take-value? Regardless of circumstances? At least the Crec haven't gone that crazy.
 
