--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -72,7 +72,7 @@ Gog's cheeks tightened with the suppression of a smile.
 
 "What has that got to do with what we're talking about?", asked Gog.
 
-"Force is force <-xxx do we like 'force'? xxx, whether it's about taking value or removing freedom.
+"Strain is strain, whether it's about taking value or removing freedom.
 
 In a way, they're similar things; freedom and value. You can use your freedom to get value. Taking away your freedom is like taking value you don't yet have, because 'they' have wrecked your plans. Maybe /you/ want to be a professional banana-talker...!"
 
