--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -74,7 +74,7 @@ Gog's cheeks tightened with the suppression of a smile.
 
 "Strain is strain, whether it's about taking value or removing freedom.
 
-In a way, they're similar things; freedom and value. You can use your freedom to get value. Taking away your freedom is like taking value you don't yet have, because 'they' have wrecked your plans. Maybe /you/ want to be a professional banana-talker...!"
+In a way, they're similar things; freedom and value. You can use your freedom to get value. Taking away your freedom is like taking value you don't yet have, because 'they' have wrecked your plans. Maybe /you/ want to be a professional banana-talker and charge value for your performances...!"
 
 Gog answered with a question, while smirking gratefully. "Are we really gonna trek it out the whole way through, without a bevy?"
 
