--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -76,9 +76,11 @@ Gog's cheeks tightened with the suppression of a smile.
 
 In a way, they're similar things; freedom and value. You can use your freedom to get value. Taking away your freedom is like taking value you don't yet have, because 'they' have wrecked your plans. Maybe /you/ want to be a professional banana-talker and charge value for your performances...!"
 
+Both men reacted to this idea with great mirth.
+
 Gog answered with a question, while smirking gratefully. "Are we really gonna trek it out the whole way through, without a bevy?"
 
-"Why not? So long as we hit Snare Plains by maybe one palm after sundown, we'll be set like a murderous monkey[fn:: A strange expression that means something like 'in like Flynn'. It comes from the observation that a monkey that has killed one of is own kind and is relaxing in its nest eating the corpse has a look of complete contentment, sometimes even with a bloody smile that humans easily pick up on.]."
+"Why not? So long as we hit Snare Plains by maybe one palm after sundown, we'll be set like a murderous monkey[fn:: A strange expression that means something like 'in like Flynn'. It comes from the observation that a monkey that has killed one of is own kind and is relaxing in its nest eating the corpse has a look of complete contentment, as though knowing this once-in-life indulgence is going to shortly cost /his/ life, sometimes even with a bloody smile that humans easily pick up on. It's like the last few minutes spent with a dirty magazine found in the woods by a modern all-finger-and boy, knowing he will try, and fail, to sneak it in the car for the ride home with mom and dad.]."
 
 "That's a palm of walking in the dark in Small Woods."
 
