--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -80,7 +80,7 @@ Both men reacted to this idea with great mirth.
 
 Gog answered with a question, while smirking gratefully. "Are we really gonna trek it out the whole way through, without a bevy?"
 
-"Why not? So long as we hit Snare Plains by maybe one palm after sundown, we'll be set like a murderous monkey[fn:: A strange expression that means something like 'in like Flynn'. It comes from the observation that a monkey that has killed one of is own kind and is relaxing in its nest eating the corpse has a look of complete contentment, as though knowing this once-in-life indulgence is going to shortly cost /his/ life, sometimes even with a bloody smile that humans easily pick up on. It's like the last few minutes spent with a dirty magazine found in the woods by a modern all-finger-and boy, knowing he will try, and fail, to sneak it in the car for the ride home with mom and dad.]."
+"Why not? So long as we hit Snare Plains by maybe one palm after sundown, we'll be set like a murderous monkey[fn:: A strange expression that means something like 'in like Flynn'. It comes from the observation that a monkey that has killed one of is own kind and is relaxing in its nest eating the corpse has a look of complete contentment, as though knowing this once-in-life indulgence is going to shortly cost /his/ life, sometimes even with a bloody smile that humans easily pick up on.]."
 
 "That's a palm of walking in the dark in Small Woods."
 
