--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -84,7 +84,7 @@ Gog answered with a question, while smirking gratefully. "Are we really gonna tr
 
 "That's a palm of walking in the dark in Small Woods."
 
-"Running.", corrected Grav.
+"Less half a palm, and /running/!", corrected Grav helpfully.
 
 Much later, it getting dark and their nearing the end of Small Woods, they encountered a forest-child[fn:: make sure naming is consistent and that there has been a footnote already.] whose path was intersecting with the only established trail for palm, as seems always to be the case, and only in the Forest; /any/ Forest.
 
@@ -300,5 +300,3 @@ xxx Someone with a clever name scares kids straight about lizard bird awareness 
 
 
 xxx 4 later: with hastily, poorly-appointed row after row of little hills, with a kind of crash pad of a cave.
-
-
