--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -84,6 +84,8 @@ Gog answered with a question, while smirking gratefully. "Are we really gonna tr
 
 "That's a palm of walking in the dark in Small Woods."
 
+xxx <- seems too short of a time xxx
+
 "Less half a palm, and /running/!", corrected Grav helpfully.
 
 Much later, it getting dark and their nearing the end of Small Woods, they encountered a forest-child[fn:: make sure naming is consistent and that there has been a footnote already.] whose path was intersecting with the only established trail for palm, as seems always to be the case, and only in the Forest; /any/ Forest.
