--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -88,7 +88,7 @@ xxx <- seems too short of a time xxx
 
 "Less than one /half/ of one palm, and /running/!", corrected Grav helpfully.
 
-Much later, it getting dark and their nearing the end of Small Woods, they encountered a forest-child[fn:: make sure naming is consistent and that there has been a footnote already.] whose path was intersecting with the only established trail for palm, as seems always to be the case, and only in the Forest; /any/ Forest.
+Much later, it getting dark and their nearing the end of Small Woods, they encountered a forest-child[fn:: make sure naming is consistent and that there has been a footnote already.] whose path was intersecting with the only established trail for several palm, as seems always to be the case, and only in the Forest; /any/ Forest.
 
 "Greetings cheerful fellow traveler!", said Grav, there never having been any sense of fear about them from anyone that he could recall.
 
