--- a/Spoilers.org
+++ b/Spoilers.org
@@ -39,7 +39,8 @@ Note: Grav cleverly invents the concept of "lawyer", works hard to become one, f
 - Thag gives a big speech, but he has no lower lip!? Maybe he has a speaker. Maybe we lose track of who is the main attraction: the speaker or the deformed, dumb man? (oooh)
 - It seems like we claim G&G and all cavemen always run in the woods (first, maybe drop that?) but sometimes they are walking!!? Actual bushmen (whatever) do not do this unless they're running down a prey. Maybe instead, the men are in a hurry to get to the mine for some /reason/...? Then they may freely walk on occasion, released from the author's unreasonable expectations.
 - wrt running to the mine, maybe you issekinichou: you explain /why/ they are going (which we don't) and that is an "mild emergency" of some kind and so that is also why they are /running/.
-- 
+- Lots of references to forest-children. It needs to be presented in-order.
+- How do we not duplicate definitions: one definition is in a footnote, the other is in the "Glossary"?
 
 * Relations
 
