--- a/Appendix.org
+++ b/Appendix.org
@@ -58,9 +58,9 @@ Be careful not to over-think the meaning, but it should be apparent from context
 - several-finger: A quantity of something. It is exactly 10. The number of fingers you have. Like "dozen" but two less.
 - sit-ham-stone: Chair
 - sit-ham: Butt-cheek
-- Small Woods: The more woodsy part of the trek from Bhorv Zolk, just before reaching Snare Planes. The transition is rather sudden: One goes from shady canopy to open sky in only a few steps. The boundary looks like a green, tumbling ocean meeting a dusty, scrubby continent, with the overhanging trees looking like frozen waves about to crash.
+- Small Woods: The more woodsy part of the trek from Bhorv Zolk, just before reaching Snare Plains. The transition is rather sudden: One goes from shady canopy to open sky in only a few steps. The boundary looks like a green, tumbling ocean meeting a dusty, scrubby continent, with the overhanging trees looking like frozen waves about to crash.
 - snake-meal: A "bump", "lump", "protuberance", "hump", or area of fattening. Also used in the way we say, "love handles".
-- Snare Planes: The plains/savanna met just before Fayt-Caves when traveling from Bhorv Zolk.
+- Snare Plains: The plains/savanna met just before Fayt-Caves when traveling from Bhorv Zolk.
 - soot-pallet: Wherever fire has deposited soot on an area of stone that has been used for writing, if you write in it, it becomes a "soot-pallet". It's as common as and thought of like billboards, but are not thought of as owned, so it's acceptable for someone to write something (proper) on such a sooted stone surface. Trespassing is still a thing, though.
 - squirrel-hoard: An abstract quantity meaning "a lot", if you thought "a whole bunch of" you'd be close.
 - strength: "Force", in the way used in physics.
