--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -22,7 +22,7 @@ Fayt-Caves was a shanty town, but made out of rock, which really looks nicer tha
 
 And it was small-knowledge[fn:: 'small[-one]-knowledge': common sense, widely known.] that this was the norm; surrounding more or less every clubbing-camp in the Forest and its protectorates was a 'bad neighborhood' by most definitions. No one thought this amiss. It was never questioned[fn:: This effect was also seen surrounding Crec's very few places of high learning, 'scratching-camps'].
 
-Grav and Gog had decided to leave the day after the revelation of Ender's-Sword, giving them the opportunity to take make a leisurely day of it, needing only to cover one and one half of one all-finger palm[fn:: About 30 'imperial' miles.] of pretty standard jungle, woods, and scrubby savanna. with the way well-traveled and therefore clearly marked, well serviced by vendors, and safe-with-many. They had even let themselves sleep in a bit[fn:: With rare exception, all cavepeople woke at dawn, even on deeply overcast days. Another palm of sleep more, if you found a place dark enough, was considered decadent.]. Since the final part of the journey crossed a wide, flat, scrubby plane and the moon was sufficiently bright, they would be able to travel for hours after dark set in.
+Grav and Gog had decided to leave the day after the revelation of Ender's-Sword, giving them the opportunity to take make a leisurely day of it, needing only to cover one and one half of one all-finger palm[fn:: About 30 'imperial' miles.] of pretty standard jungle, woods, and scrubby savanna. with the way well-traveled and therefore clearly marked, well serviced by vendors, and safe-with-many. They had even let themselves sleep in a bit[fn:: With rare exception, all cavepeople woke at dawn, even on deeply overcast days. Another palm of sleep more, if you found a place dark enough, was considered decadent.]. Since the final part of the journey crossed a wide, flat, scrubby plain and the moon was sufficiently bright, they would be able to travel for hours after dark set in.
 
 In the worst case, they planned to bevvy one night, wake up early and arrive at the Choh-Ov before conch.
 
@@ -88,7 +88,7 @@ xxx <- seems too short of a time xxx
 
 "Less than one /half/ of one palm, and /running/!", corrected Grav helpfully.
 
-Much later, it getting dark and their nearing the end of Small Woods, they encountered a forest-child[fn:: make sure naming is consistent and that there has been a footnote already.] whose path was intersecting with the only established trail for several palm, as seems always to be the case, and only in the Forest; /any/ Forest.
+Much later, it getting dark and their nearing the end of Small Woods, they encountered a forest-child[fn:: make sure naming is consistent and that there has been a footnote already.] whose path was intersecting with the only established trail for several palm, as seems always to be the case with the forest-children, and only in the Forest; /any/ Forest, really, but not on a plain for example.
 
 "Greetings cheerful fellow traveler!", said Grav, there never having been any sense of fear about them from anyone that he could recall.
 
