--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -88,23 +88,23 @@ xxx <- seems too short of a time xxx
 
 "Less than one /half/ of one palm, and /running/!", corrected Grav helpfully.
 
-Much later, it getting dark and their nearing the end of Small Woods, they encountered a forest-child[fn:: make sure naming is consistent and that there has been a footnote already.] whose path was intersecting with the only established trail for several palm, as seems always to be the case with the forest-children, and only in the Forest; /any/ Forest, really, but not on a plain for example.
+Much later, it getting dark and their nearing the end of Small Woods, they encountered a forest-child[fn:: xxx make sure naming is consistent and that there has been a footnote already.] whose path was intersecting with the only established trail for several palm, as seems always to be the case with the forest-children, and only in the Forest; /any/ Forest, really, but not on a plain for example.
 
 "Greetings cheerful fellow traveler!", said Grav, there never having been any sense of fear about them from anyone that he could recall.
 
-Grav knew he would not be able to make anything of the response. Each time, it seemed they had to rebuild the pantomime vocabulary with them from scratch. But they were practiced.
+Grav knew he would the forest-child would not attempt to decipher this first greeting and so not, yet, be tipped off to the fact that they were speaking separate languages, and also knowing he would not be able to make anything of the traveler's response. The encounters were always eerily similar to one another, and each time it seemed they had to build their pantomime vocabulary with them from scratch. But they were practiced, and both men knew in any case, they'd have to get through the first, rather long part where the forest-child is unaware they do not understand.
 
-The forest-child <-xxx /was/ a child. It was astonishing. No matter how hard anyone had tried, they couldn't make out any dwarfish features. Other than often being scared and every so often missing fingers, teeth, eyes, or limbs, and but for heaving leathery, tough skin, they were what we moderns would call "toddlers".
+And for all anyone could tell, a forest-child /was/ a child. It was astonishing. No matter how hard anyone had tried, they couldn't make out any dwarfish features. Other than often being scarred and every so often missing fingers, teeth, eyes, or limbs, and but for toned muscles under the leathery, tough skin, they were what we moderns would call "toddlers".
 
-They did not speak Crecspeak or anything remotely like it, but were evidently fluent in some kind of language. The small boy[fn:: No one had ever seen a female, and it was always apparent the present company was male in gender.] slouched in a way that a very relaxed, fit, successful older caveman would; a standing slouch that said he could take them or leave them. Or possibly even kill them. But he showed no sense of fear or hatred, just casual toddlerness. They smoked a pipe about half the time. This one was not a partaker[fn:: The ones that smoked, really smoked, and reeked of whatever weed they smoke.].
+They did not know Crecspeak or anything remotely like it, but were evidently fluent in some kind of language. The small boy[fn:: No one had ever seen a female, and it was always apparent the present company was male in gender.] slouched in a way that a very relaxed, fit, successful older caveman would; a standing slouch that said he could take them or leave them. Or possibly even kill them. But he showed no sense of fear or hatred, just casual toddlerness. They smoked a pipe in about half the cases. This one was not a partaker[fn:: The ones that smoked, really smoked, and reeked of whatever weed they smoke.]. He currently stood with the sole of one foot resting on the calf of the other leg, with his spear, at least three times his height stuck in the ground and currently serving as just a staff to lean on, ever casually.
 
-From appearances, the toddler had not yet considered that the two men might not understand his language. He paused very briefly on occasion in a way that suggested he was baffled by the lack of a response, but continued on just the same.
+And predictably, from appearances, the toddler had not yet considered that the two men might not understand his language. He paused very briefly on occasion in a way that suggested he was baffled by the lack of a response, but continued on just the same.
 
-After an especially baffling non-response, Grav took the initiative to blow away his new friend with casual, pithy, fluently spoken Crec utterances; asking all kinds of questions about who cleaned him after scat time, where was this crazy toddler kingdom located, did he live in a mushroom, and aside from one's thumb, what kind of things were out there to suck on for an active baby like himself.
+After an especially baffling non-response, Grav took the initiative to blow away his new friend with casual, pithy, fluently spoken Crec utterances; asking all kinds of questions about who cleaned him after scat time, where was this crazy toddler kingdom located, did he live in a mushroom, and aside from one's thumb, what kind of things were out there in the woods to suck on for an active baby like himself.
 
-The light of understanding, forgiveness, and kindness to new friends dawned on the toddler's honest face. He bowed slightly, showing who-knows-what to the woods behind him.
+The light of understanding, forgiveness, and kindness toward new friends dawned on the toddler's honest face. He bowed slightly, showing who-knows-what to the woods behind him.
 
-He made a lot of "we friends" gestures with his hands, his heart, and his toothless smile. Grav and Gog mimicked the ones they felt pretty sure about.
+He made a lot of "we friends" gestures with his hands, his heart, and his mostly toothless smile. Grav and Gog mimicked the ones they felt pretty sure about.
 
 Grav turned to Gog. "How is your forest-child-babble?"
 
