--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -90,13 +90,15 @@ xxx <- seems too short of a time xxx
 
 Much later, it getting dark and their nearing the end of Small Woods, they encountered a forest-child[fn:: xxx make sure naming is consistent and that there has been a footnote already.] whose path was intersecting with the only established trail for several palm, as seems always to be the case with the forest-children, and only in the Forest; /any/ Forest, really, but not on a plain for example.
 
-"Greetings cheerful fellow traveler!", said Grav, there never having been any sense of fear about them from anyone that he could recall.
+"Greetings cheerful fellow traveler!", said Grav loudly, there never having been any sense of fear about them from anyone that he could recall, and Grav anticipating a reliably predictable sequence of events to follow.
 
-Grav knew he would the forest-child would not attempt to decipher this first greeting and so not, yet, be tipped off to the fact that they were speaking separate languages, and also knowing he would not be able to make anything of the traveler's response. The encounters were always eerily similar to one another, and each time it seemed they had to build their pantomime vocabulary with them from scratch. But they were practiced, and both men knew in any case, they'd have to get through the first, rather long part where the forest-child is unaware they do not understand.
+Grav knew his opening comment would be ignored for signs of "foreignness", far from having fact that they were speaking separate languages considered, and also knowing he would not be able to make anything of the traveler's response.
+
+The encounters were always eerily similar to one another, and each time it seemed they had to build their pantomime vocabulary with them from scratch. But they were practiced, and both men knew in any case, they'd have to get through the first, rather long part where the forest-child is unaware they do not understand.
 
 And for all anyone could tell, a forest-child /was/ a child. It was astonishing. No matter how hard anyone had tried, they couldn't make out any dwarfish features. Other than often being scarred and every so often missing fingers, teeth, eyes, or limbs, and but for toned muscles under the leathery, tough skin, they were what we moderns would call "toddlers".
 
-They did not know Crecspeak or anything remotely like it, but were evidently fluent in some kind of language. The small boy[fn:: No one had ever seen a female, and it was always apparent the present company was male in gender.] slouched in a way that a very relaxed, fit, successful older caveman would; a standing slouch that said he could take them or leave them. Or possibly even kill them. But he showed no sense of fear or hatred, just casual toddlerness. They smoked a pipe in about half the cases. This one was not a partaker[fn:: The ones that smoked, really smoked, and reeked of whatever weed they smoke.]. He currently stood with the sole of one foot resting on the calf of the other leg, with his spear, at least three times his height stuck in the ground and currently serving as just a staff to lean on, ever casually.
+They did not know Crecspeak or anything remotely like it, but were evidently fluent in some kind of language. The small boy[fn:: No one had ever seen a female, and anyway it was always apparent the present company was male in gender.] slouched in a way that a very relaxed, fit, successful older caveman would; a standing slouch that said he could take them or leave them. Or possibly even kill them. But he showed no sense of fear or hatred, just casual toddlerness. They smoked a pipe in about half the cases. This one was not a partaker[fn:: The ones that smoked, really smoked, and reeked of whatever weed they smoke.]. He currently stood with the sole of one foot resting on the calf of the other leg, with his spear, at least three times his height stuck in the ground and currently serving as just a staff to lean on, ever casually.
 
 And predictably, from appearances, the toddler had not yet considered that the two men might not understand his language. He paused very briefly on occasion in a way that suggested he was baffled by the lack of a response, but continued on just the same.
 
