--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -102,7 +102,7 @@ They did not know Crecspeak or anything remotely like it, but were evidently flu
 
 And predictably, from appearances, the toddler had not yet considered that the two men might not understand his language. He paused very briefly on occasion in a way that suggested he was baffled by the lack of a response, but continued on just the same.
 
-After an especially baffling non-response, Grav took the initiative to blow away his new friend with casual, pithy, fluently spoken Crec utterances; asking all kinds of questions about who cleaned him after scat time, where was this crazy toddler kingdom located, did he live in a mushroom, and aside from one's thumb, what kind of things were out there in the woods to suck on for an active baby like himself.
+After an especially baffling non-response, Grav took the initiative to blow away his new friend with some casual, pithy, fluently spoken Crec utterances[fn:: It had been observed that trying to speak to them clearly and slowly only resulted in them usually thinking you were an especially hard-to-understand individual, maybe with a jaw injury, which was common among primates of all sorts. The secret was to make it clear that you're saying a whole bunch of complicated stuff, only /in another language/.]; asking all kinds of questions about who cleaned him after scat time, where was this crazy toddler kingdom located, did he live in a mushroom, and aside from one's thumb, what kind of things were out there in the woods to suck on for an active baby like himself.
 
 The light of understanding, forgiveness, and kindness toward new friends dawned on the toddler's honest face. He bowed slightly, showing who-knows-what to the woods behind him.
 
